CSS-fixed jumping listgroups and general link hover (should be red afterall).

--- a/less/stb-list-group.less
+++ b/less/stb-list-group.less
@@ -32,20 +32,27 @@ a.list-group-item.nude:hover {
 
 //Links selection with no right og left border
 
-.stb-list-group a.list-group-item.links{
+.stb-list-group a.list-group-item.links {
   border-left:none; 
   border-right:none;
   border-radius: 0px;
+  padding: 10px 15px 9px 15px;
 }
 
-.stb-list-group a.list-group-item.links:hover{
-  background-color: #F2F2F2;  
+.stb-list-group a.list-group-item.links:hover {
+  background-color: @stb-gray-first;  
   cursor: pointer;
+  padding: 10px 15px;
 }
 
 .list-group-item.header {
-  background-color: #C7B299;
+  background-color: @stb-gray-third;
   color: #000000;
   font-weight: bold;
+}
+
+.list-group-item, .list-group-item:hover {
+  padding: 10px 15px 9px 15px;
+  border-bottom: 1px solid @stb-gray-third;
 }
 
