--- a/less/stb-typography.less
+++ b/less/stb-typography.less
@@ -89,6 +89,9 @@ h3 {
   &.box {
     font-weight: normal;
     font-family: @font-family-signa-light;
+    a, a:hover {
+      padding-bottom: 0px;
+    }
   }
 }
 
@@ -192,6 +195,7 @@ div a{
 p a:hover,
 div a:hover {
   text-decoration: none;
+  color: @stb-primary-color;
   border-bottom: 1px solid @stb-primary-color;
   padding-bottom: 1px;
   &.twister, &.dropdown-toggle{
